--- a/styles/main.css
+++ b/styles/main.css
@@ -182,16 +182,7 @@ h1,
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-transform: translateY(-3em);
-  transform: translateY(-3em);
-}
-
-@media screen and (max-width: 576px) {
-  .container .right .icon-list {
-    -webkit-transform: translateY(-0.1em);
-    transform: translateY(-0.1em);
-    padding-left: 0;
-  }
+  margin-top: 40px;
 }
 
 .container .right .icon-list .icon {
